<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393939"
    tools:context=".ResultActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:text="@string/thankyou"
            android:textColor="#ff5a09"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sendetomail"
            android:textColor="#abaaaa"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSendEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:background="@layout/custom_button"
            android:text="@string/send"
            android:textColor="#ff5a09"
            android:textSize="18sp"
            android:textStyle="bold" />
        <!-- Link to RSS Activity -->

    </LinearLayout>

</RelativeLayout>