<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#393939" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="vertical"
            android:padding="5sp" >

            <TextView
                android:id="@+id/textSurvey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:text="@string/surveytitle"
                android:textColor="#ff5a09"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textQuestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:text="@string/defquestion"
                android:textColor="#abaaaa"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textRequired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5sp"
                android:text="@string/required"
                android:textColor="#ff0000"
                android:textSize="18sp"
                android:textStyle="italic" />

            <!-- Will hold checkboxes if needed -->

            <LinearLayout
                android:id="@+id/viewLL"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textColor="#abaaaa"
                android:textSize="20sp" >
            </LinearLayout>

            <!-- Will hold radio buttons -->

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textColor="#abaaaa"
                android:textSize="20sp" >
            </RadioGroup>

            <!-- other field and open question -->

            <RelativeLayout
                android:id="@+id/viewRL"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="22sp"
                    android:layout_marginTop="12sp"
                    android:text="@string/other"
                    android:textColor="#abaaaa"
                    android:textSize="17sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editTextOpenOther"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:layout_toRightOf="@id/textOther"
                    android:background="@layout/custom_edittext"
                    android:inputType="text"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:visibility="gone" />
            </RelativeLayout>
            <!-- next question button -->

            <Button
                android:id="@+id/nextQuestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@layout/custom_button"
                android:text="@string/nextquestion"
                android:textColor="#ff5a09"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>